fix(button): remove extra margin when icon is empty

--- a/src/components/calcite-button/calcite-button.scss
+++ b/src/components/calcite-button/calcite-button.scss
@@ -70,17 +70,26 @@
     --calcite-button-content-margin: theme("margin.4");
   }
 }
-
-:host(:not([icon-start])) {
-  .content {
-    margin-left: unset;
-  }
-}
-:host(:not([icon-end])) {
+:host(:not([icon-start="undefined"])) {
   .content {
     margin-right: unset;
   }
 }
+:host(:not([icon-end="undefined"])) {
+  .content {
+    margin-left: unset;
+  }
+}
+// :host(:not([icon-start])) {
+//   .content {
+//     margin-left: unset;
+//   }
+// }
+// :host(:not([icon-end])) {
+//   .content {
+//     margin-right: unset;
+//   }
+// }
 :host([icon-start]:not([icon-end])) {
   .calcite--rtl .content {
     margin-left: unset;
